# pp-final-group24

./: .gitignore  CMakeLists.txt
include/GP/: utils.hpp
include/GP/gp/: model.hpp
include/GP/linalg/: linalg.hpp
include/GP/matrix/: matrix.hpp
script/: generate_prsa_dataset.py
src/: main.cpp
